--- a/src/docs/asciidoc/lostPet.adoc
+++ b/src/docs/asciidoc/lostPet.adoc
@@ -1,9 +1,27 @@
-=== 찾아주세요 피드 API
+== 찾아주세요 피드(LostPetFeed)
 
-==== 1. 피드 목록 조회
+=== 1. 피드 목록 조회
+
+|====
+|속성 |설명
+
+|`(Optional) last-feed`|이전 조회한 마지막 feed ID
+|`(Required) size`|조회 목록 최대 개수
+|`(Optional) sort`|LATEST(default), POPULAR
+
+|====
+
+==== 1.1 첫 조회 (last-feed 없음)
 
 ===== Request
-include::{snippets}/api/v1/feed/lost-pet/http-request.adoc[]
+include::{snippets}/LostPetFeed/목록_첫조회/httpie-request.adoc[]
 
 ===== Response
-include::{snippets}/api/v1/feed/lost-pet/http-response.adoc[]
+include::{snippets}/LostPetFeed/목록_첫조회/http-response.adoc[]
+
+==== 1.2 재 조회 (last-feed 있음)
+===== Request
+include::{snippets}/LostPetFeed/목록_재조회/http-request.adoc[]
+
+===== Response
+include::{snippets}/LostPetFeed/목록_재조회/http-response.adoc[]
