--- a/src/docs/asciidoc/lostPet.adoc
+++ b/src/docs/asciidoc/lostPet.adoc
@@ -11,7 +11,7 @@
 
 |====
 
-==== 1.1 첫 조회 (last-feed 없음)
+==== 1.1 피드 목록 첫 조회 (last-feed 없음)
 
 ===== Request
 include::{snippets}/LostPetFeed/목록_첫조회/httpie-request.adoc[]
@@ -19,9 +19,25 @@ include::{snippets}/LostPetFeed/목록_첫조회/httpie-request.adoc[]
 ===== Response
 include::{snippets}/LostPetFeed/목록_첫조회/http-response.adoc[]
 
-==== 1.2 재 조회 (last-feed 있음)
+==== 1.2 피드 목록 재 조회 (last-feed 있음)
 ===== Request
-include::{snippets}/LostPetFeed/목록_재조회/http-request.adoc[]
+include::{snippets}/LostPetFeed/목록_재조회/httpie-request.adoc[]
 
 ===== Response
 include::{snippets}/LostPetFeed/목록_재조회/http-response.adoc[]
+
+==== 1.3 피드 목록 필터 조회
+===== Request
+===== Response
+
+=== 2. 피드 조회
+
+include::{snippets}/LostPetFeed/전체피드조회/path-parameters.adoc[]
+
+==== 2.1 피드 조회
+
+===== Request
+include::{snippets}/LostPetFeed/전체피드조회/httpie-request.adoc[]
+
+===== Response
+include::{snippets}/LostPetFeed/전체피드조회/http-response.adoc[]
