test: CommunityFeed 상세조회 기능 테스트
prettyPrint 적용

--- a/src/docs/asciidoc/communityFeed.adoc
+++ b/src/docs/asciidoc/communityFeed.adoc
@@ -25,3 +25,19 @@ include::{snippets}/CommunityFeed/목록_재조회/http-request.adoc[]
 
 ===== Response
 include::{snippets}/CommunityFeed/목록_재조회/http-response.adoc[]
+
+==== 1.3 피드 목록 필터 조회
+===== Request
+===== Response
+
+=== 2. 피드 조회
+
+include::{snippets}/CommunityFeed/전체피드조회/path-parameters.adoc[]
+
+==== 2.1 피드 조회
+
+===== Request
+include::{snippets}/CommunityFeed/전체피드조회/httpie-request.adoc[]
+
+===== Response
+include::{snippets}/CommunityFeed/전체피드조회/http-response.adoc[]
