--- a/src/docs/asciidoc/auth.adoc
+++ b/src/docs/asciidoc/auth.adoc
@@ -45,3 +45,40 @@ Content-Type: text/plain
 
 Logout successful
 ----
+
+==== 1.3 인증 상태 확인
+
+===== Request
+include::{snippets}/Member/인증체크/httpie-request.adoc[]
+
+===== Response
+include::{snippets}/Member/인증체크/http-response.adoc[]
+
+==== 1.4 로그인 한 사용자 본인 정보 조회
+
+사용자 "nickname"이 지금은 카카오에서 받은 "nickname"을 사용 중 입니다. 추후 "랜덤명+번호" 형식으로 변경하겠습니다.
+
+===== Request
+[source,http]
+----
+GET http://3.34.210.88:8080/api/v1/member/me
+----
+
+===== Response
+[source,http]
+----
+HTTP/1.1 200 OK
+Content-Type: application/json
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
+Content-Length: 472
+
+{
+    "nickname": "petcomming",
+    "profileImageUrl": "http://k.kakaocdn.net_사용자카카오프로필URL"
+}
+----
