refactor: 사용자 프로필 제공 삭제 및 api 문서 수정

--- a/src/docs/asciidoc/auth.adoc
+++ b/src/docs/asciidoc/auth.adoc
@@ -78,7 +78,7 @@ X-Frame-Options: DENY
 Content-Length: 472
 
 {
-    "nickname": "petcomming",
-    "profileImageUrl": "http://k.kakaocdn.net_사용자카카오프로필URL"
+    "id": 1,
+    "nickname": "재능있는미어캣1"
 }
 ----
