feat: 찾아주세요 피드 소프트 딜리트 + 테스트

--- a/src/docs/asciidoc/communityFeed.adoc
+++ b/src/docs/asciidoc/communityFeed.adoc
@@ -61,7 +61,7 @@ include::{snippets}/CommunityFeed/submit-feed/http-response.adoc[]
 
 ===== Request
 
-`/api/v1/feed/community{feedId}/delete`
+`/api/v1/feed/community/{feedId}/delete`
 
 include::{snippets}/CommunityFeed/delete-feed/httpie-request.adoc[]
 
